--- a/components/splash-modules/splash-modules-style.scss
+++ b/components/splash-modules/splash-modules-style.scss
@@ -1,14 +1,31 @@
+@import 'vars';
+
 .splash-modules {
   width:100%;
   height:100%;
 
-  .links line {
-    stroke: #999;
-    stroke-opacity: 0.6;
-  }
+  &__node {
+    cursor:pointer;
 
-  .nodes circle {
-    stroke: #fff;
-    stroke-width: 1.5px;
+    image {
+      opacity:0.75;
+    }
+
+    text {
+      opacity:0;
+      font-size:0.8em;
+      fill:grey;
+      text-anchor:middle;
+    }
+
+    image,
+    text {
+      transition:opacity 250ms;
+    }
+
+    &:hover {
+      image,
+      text { opacity:1; }
+    }
   }
 }
