--- a/components/cube/cube-style.scss
+++ b/components/cube/cube-style.scss
@@ -15,7 +15,7 @@
 
   &__inner {
     position:absolute;
-    top:0;
+    top:-2px;
     left:0;
   }
 
@@ -23,35 +23,14 @@
     position:absolute;
     width:100%;
     height:100%;
-    backface-visibility:hidden;
-    background:radial-gradient(transparent 30%,rgba(5,17,53,.2) 100%);
-
-    &:after {
-      content:'';
-      position:absolute;
-      display:block;
-      width:100%;
-      height:100%;
-      backface-visibility:hidden;
-      transition:background 750ms;
-    }
+    border: 3px solid map-get($colors, white);
   }
 
-  .cube__outer .cube__face:after {
-    background:transparentize(map-get($colors, malibu), 0.6);
+  .cube__outer .cube__face {
+    background:transparentize(map-get($colors, malibu), 0.5);
   }
 
-  .cube__inner .cube__face:after {
-    background:transparentize(map-get($colors, denim), 0.2);
-  }
-
-  &:hover {
-    .cube__outer .cube__face:after {
-      background:transparentize(map-get($colors, malibu), 0.7);
-    }
-
-    .cube__inner .cube__face:after {
-      background:map-get($colors, denim);
-    }
+  .cube__inner .cube__face {
+    background:map-get($colors, denim);
   }
 }
