--- a/components/splash-modules/splash-modules-style.scss
+++ b/components/splash-modules/splash-modules-style.scss
@@ -8,7 +8,7 @@
     cursor:pointer;
 
     image {
-      opacity:0.75;
+      opacity:0.5;
     }
 
     text {
@@ -27,5 +27,10 @@
       image,
       text { opacity:1; }
     }
+  }
+
+  &__link {
+    stroke:map-get($colors, alto);
+    stroke-width:1;
   }
 }
