Added active state

--- a/components/sidebar-item/sidebar-item-style.scss
+++ b/components/sidebar-item/sidebar-item-style.scss
@@ -63,6 +63,10 @@
       display:block;
     }
 
+    .sidebar-item__title {
+      color: #c0903f;
+    }
+
     .sidebar-item__toggle {
       margin-left:-2px;
       transform:rotate(180deg) translateX(1px);
