Hide sub-menu if empty

--- a/components/sidebar-item/sidebar-item-style.scss
+++ b/components/sidebar-item/sidebar-item-style.scss
@@ -52,12 +52,6 @@
     }
   }
 
-  &--empty {
-    .sidebar-item__toggle {
-      display:none;
-    }
-  }
-
   &--open {
     .sidebar-item__anchors {
       display:block;
@@ -70,6 +64,13 @@
     .sidebar-item__toggle {
       margin-left:-2px;
       transform:rotate(180deg) translateX(1px);
+    }
+  }
+
+  &--empty {
+    .sidebar-item__toggle,
+    .sidebar-item__anchors {
+      display: none;
     }
   }
 }
