--- a/components/sidebar-mobile/sidebar-mobile-style.scss
+++ b/components/sidebar-mobile/sidebar-mobile-style.scss
@@ -15,7 +15,7 @@
   transform: translate3D(-100%, 0, 0);
   transition: all 500ms;
 
-  @include break {
+  @include break('large') {
     display: none;
   }
 
