--- a/components/page/page-style.scss
+++ b/components/page/page-style.scss
@@ -10,12 +10,15 @@
 
 // XXX: Temporary hack to fix sidebar width
 .page div:first-of-type {
-  flex:0 0 auto;
-  overflow:auto;
+  flex: 0 0 auto;
+  overflow: auto;
 
   @include break {
+    flex:0 0 30%;
+  }
+
+  @include break('large') {
     flex:0 0 25%;
-    overflow:hidden;
   }
 }
 
