Minor Logo tweak

--- a/components/logo/logo-style.scss
+++ b/components/logo/logo-style.scss
@@ -16,6 +16,7 @@
     font-family:'Geomanist', 'Century Gothic', sans-serif;
     font-size:1.5em;
     font-weight:500;
+    letter-spacing:0.5px;
     text-rendering: geometricPrecision;
     margin-left:0.25em;
     color:map-get($colors, emperor);
