[fix] Fix for markdown table styling and cleaner formatting of the organization table

--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -135,6 +135,10 @@
         text-align: left;
         margin: 0;
         padding: 6px 13px;
+
+        img {
+          max-width:none;
+        }
       }
 
       th, td {
