--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -31,7 +31,7 @@
 .navigation__inner {
   display: flex;
   align-items: center;
-  padding: 0.6em 0 0.6em 1em;
+  padding: 0.6em 1em;
 
   @include break {
     padding:0 1.5em;
@@ -100,64 +100,73 @@
 }
 
 .navigation__search {
-  flex:0 0 auto;
-  display:flex;
-  padding:0.8em 0;
-  justify-content:flex-end;
+  display:none;
+}
 
-  &-input {
-    font-family:'Cabin', 'Century Gothic', sans-serif;
-    font-size:14px;
-    text-indent:0.5em;
-    width:0;
-    background:transparent;
-    border:none;
-    padding:0;
-    border-bottom:1px solid map-get($colors, emperor);
-    margin-right:0;
-    box-shadow:none;
-    transition:all 250ms;
-    color: map-get($colors, white);
-    text-shadow: 0 0 0 map-get($colors, concrete);
-    -webkit-text-fill-color: transparent;
+@include break {
+  .navigation__search {
+    flex:0 0 auto;
+    display:flex;
+    justify-content:flex-end;
+    padding:0.8em 0;
 
-    &:focus {
-      outline:none;
+    &-input {
+      padding:0;
+      border:none;
+      background:transparent;
+
+      width:0;
+      font-size:14px;
+      font-family:'Cabin', 'Century Gothic', sans-serif;
+      text-indent:0.5em;
+      border-bottom:1px solid map-get($colors, emperor);
+      margin-right:0;
+      color: map-get($colors, white);
+      text-shadow: 0 0 0 map-get($colors, concrete);
+      -webkit-text-fill-color: transparent;
+      transition:all 250ms;
+
+      &:focus {
+        outline:none;
+      }
+
+      &::-webkit-input-placeholder{
+        color:map-get($colors, dove-grey);
+        text-shadow: none;
+        -webkit-text-fill-color: initial;
+      }
     }
 
-    &::-webkit-input-placeholder{
-      color:map-get($colors, dove-grey);
-      text-shadow: none;
-      -webkit-text-fill-color: initial;
-    }
-  }
+    &-icon {
+      display:inline-block;
+      font-size:getFontSize(1);
+      transform:rotate(-45deg);
+      font-weight:800;
+      color:map-get($colors, dusty-grey);
+      cursor:pointer;
+      transition:color 250ms;
 
-  &-icon {
-    display:inline-block;
-    font-size:getFontSize(1);
-    transform:rotate(-45deg);
-    font-weight:800;
-    color:map-get($colors, dusty-grey);
-    cursor:pointer;
-    transition:color 250ms;
-
-    &:hover {
-      color:map-get($colors, white);
+      &:hover {
+        color:map-get($colors, white);
+      }
     }
   }
 }
 
-.navigation--search-mode {
-  .navigation__link {
-    pointer-events:none;
-    overflow:hidden;
-    white-space:nowrap;
-    padding:1.5em 0;
-    opacity:0;
-  }
+@include break {
+  .navigation--search-mode {
+    .navigation__link {
+      pointer-events:none;
+      overflow:hidden;
+      white-space:nowrap;
+      padding:1.5em 0;
+      margin-right:-35px;
+      opacity:0;
+    }
 
-  .navigation__search-input {
-    margin-right:0.5em;
-    width:400px;
+    .navigation__search-input {
+      margin-right:0.5em;
+      width:400px;
+    }
   }
 }
