Tweaking SearchResults styling

--- a/components/search-results/search-results-style.scss
+++ b/components/search-results/search-results-style.scss
@@ -5,18 +5,20 @@
 
   &__inner {
     position:absolute;
-    top:0;
-    right:0;
     width:500px;
     height:0;
+    padding:0 1.5em;
+    top:0;
+    right:0;
     z-index:5;
-    background:map-get($colors, white);
+    background:map-get($colors, concrete);
     transition:all 250ms;
   }
 
   &--visible {
     .search-results__inner {
       height:350px;
+      padding:1.5em;
     }
   }
 }
