Remove unnecessary type=javascript attribute
Move script tag up to make sure docsearch is present
when React component tree initializes

--- a/template.ejs
+++ b/template.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
     <%- webpackConfig.html %>
 
     <% for (var script of webpackConfig.template.jsFiles) { %>
@@ -24,6 +25,5 @@
       };
     </script>
     <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
   </body>
 </html>
