Fix CSS glitch for search box & update placeholder

--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -154,6 +154,10 @@
     &-icon:focus {
       outline:none;
     }
+
+    .algolia-autocomplete {
+      display: flex !important;
+    }
   }
 }
 
