--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -154,10 +154,6 @@
     &-icon:focus {
       outline:none;
     }
-
-    .algolia-autocomplete {
-      display: flex !important;
-    }
   }
 }
 
@@ -176,5 +172,47 @@
       margin-right:0.5em;
       width:400px;
     }
+  }
+}
+
+.algolia-autocomplete {
+  display: flex !important;
+
+  .ds-dropdown-menu {
+    box-shadow:none;
+
+    &:before {
+      content:none;
+    }
+
+    [class^=ds-dataset-] {
+      border-color:map-get($colors, alto);
+      border-radius:3px;
+    }
+  }
+
+  .algolia-docsearch-suggestion--category-header {
+    border-color:map-get($colors, alto);
+  }
+
+  .algolia-docsearch-suggestion--highlight {
+    color:map-get($colors, denim);
+    background:rgba(map-get($colors, malibu), .2);
+  }
+
+  .ds-dropdown-menu .ds-suggestion.ds-cursor .algolia-docsearch-suggestion--content {
+    background:rgba(map-get($colors, dusty-grey), .15)!important;
+  }
+
+  .algolia-docsearch-suggestion--subcategory-column {
+    color:map-get($colors, dove-grey);
+  }
+
+  .algolia-docsearch-suggestion--category-header {
+    color:map-get($colors, mine-shaft);
+  }
+
+  .algolia-docsearch-suggestion--title {
+    color:map-get($colors, mine-shaft);
   }
 }
