[fix] Fixing issue with larger screens

--- a/components/navigation/navigation-style.scss
+++ b/components/navigation/navigation-style.scss
@@ -17,6 +17,10 @@
     .navigation__inner {
       position:absolute;
       left:0;
+
+      @include break {
+        left:auto;
+      }
     }
 
     .navigation__link:hover,
