bug fixes and more friendly touch responses

--- a/components/sidebar-mobile/sidebar-mobile-style.scss
+++ b/components/sidebar-mobile/sidebar-mobile-style.scss
@@ -28,9 +28,9 @@
 
   .opener{
     position: absolute;
-    top: 0;
+    top: 45px;
     bottom: 0;
-    width: 10px;
+    width: 32px;
     left: 285px;
   }
 
