--- a/styles/index.scss
+++ b/styles/index.scss
@@ -21,11 +21,11 @@ html {
 
 body {
   font: 400 getFontSize(0) 'Cabin', 'Century Gothic', sans-serif;
-  color: map-get($colors, emperor);
+  color: getColor(emperor);
 }
 
 a {
-  color: lighten(map-get($colors, denim), 5%);
+  color: lighten(getColor(denim), 5%);
   text-decoration: none;
   transition: color 250ms;
 
@@ -34,11 +34,11 @@ a {
     font-size: 0.7em;
     margin-left: 16px;
     transform: rotate(-45deg);
-    color:lighten(map-get($colors, dusty-grey), 10%);
+    color:lighten(getColor(dusty-grey), 10%);
   }
 
   &:hover {
-    color: darken(map-get($colors, denim), 5%);
+    color: darken(getColor(denim), 5%);
   }
 }
 
