--- a/components/footer/footer-style.scss
+++ b/components/footer/footer-style.scss
@@ -1,4 +1,3 @@
-@import 'vars';
 @import 'mixins';
 @import 'functions';
 
@@ -13,7 +12,7 @@
   justify-content: space-between;
   align-content: center;
   padding: 0.4em 0;
-  border-top:1px solid map-get($colors, concrete);
+  border-top:1px solid getColor(concrete);
 
   @include break {
     flex-direction: initial;
@@ -68,13 +67,13 @@
 .footer__link {
   font-size: getFontSize(-2);
   text-transform: uppercase;
-  color: map-get($colors, dusty-grey);
+  color: getColor(dusty-grey);
 
   &:not(:last-child) {
     margin-right: 1.5em;
   }
 
   &:hover {
-    color: map-get($colors, mine-shaft);
+    color: getColor(mine-shaft);
   }
 }
