--- a/components/sidecar/sidecar-style.scss
+++ b/components/sidecar/sidecar-style.scss
@@ -1,4 +1,4 @@
-@import 'vars';
+@import 'functions';
 @import 'mixins';
 
 .sidecar {
@@ -18,11 +18,11 @@
   padding: 0.75em;
   float: right;
   clear: both;
-  color: map-get($colors, alto);
+  color: getColor(alto);
   transition: all 250ms;
 
   &:hover {
-    color: map-get($colors, white);
+    color: getColor(white);
   }
 }
 
