--- a/components/sidebar-mobile/sidebar-mobile-style.scss
+++ b/components/sidebar-mobile/sidebar-mobile-style.scss
@@ -25,23 +25,23 @@
   &.no-delay{
     transition-duration: 0ms;
   }
+}
 
-  .opener{
-    position: absolute;
-    top: 45px;
-    bottom: 0;
-    width: 32px;
-    left: 285px;
-  }
+.sidebar-mobile___toggle {
+  position: absolute;
+  top: 45px;
+  bottom: 0;
+  width: 32px;
+  left: 285px;
+}
 
-  .sidebar-content{
-    position: relative;
-    width: 285px;
-    height: 100vh;
-    overflow-x: hidden;
-    background: map-get($colors, white);
-    box-shadow: 0 0 5px map-get($colors, emperor);
-  }
+.sidebar-mobile__content {
+  position: relative;
+  width: 285px;
+  height: 100vh;
+  overflow-x: hidden;
+  background: map-get($colors, white);
+  box-shadow: 0 0 5px map-get($colors, emperor);
 }
 
 .sidebar-mobile__close {
