--- a/components/splash-viz/splash-viz-style.scss
+++ b/components/splash-viz/splash-viz-style.scss
@@ -6,6 +6,7 @@
   display:flex;
   height:calc(100vh - 55px);
   min-height:320px;
+  max-height:960px;
   background:getColor(elephant);
 
   &__modules,
@@ -30,7 +31,9 @@
     display:none;
 
     @include break {
-      display:block;
+      display:flex;
+      align-items:center;
+      justify-content:center;
     }
   }
 
