--- a/components/splash-viz/splash-viz-style.scss
+++ b/components/splash-viz/splash-viz-style.scss
@@ -6,25 +6,12 @@
   display:flex;
   height:calc(100vh - 55px);
   min-height:320px;
-  max-height:960px;
+  max-height:720px;
   background:getColor(elephant);
 
   &__modules,
   &__output { 
-    flex:0 0 43.25%;
-  }
-
-  &__icon {
-    display:flex;
-    flex:1 1 auto;
-    align-items:center;
-    justify-content:center;
-  }
-    
-  &__cube {
-    img {
-      width:100%;
-    }
+    flex:0 0 45%;
   }
 
   &__modules {
@@ -33,8 +20,22 @@
     @include break {
       display:flex;
       align-items:center;
-      justify-content:center;
+      justify-content: flex-end;
+
+      img {
+        margin-right:10%;
+        width:40%;
+        max-width:400px;
+      }
     }
+  }
+
+  &__icon {
+    display:flex;
+    flex:1 1 auto;
+    align-items:center;
+
+    img { width:100%; }
   }
 
   &__output {
@@ -42,9 +43,13 @@
 
     @include break {
       display:flex;
-      flex-wrap:wrap;
-      align-content:center;
-      justify-content:center;
+      align-items:center;
     }
+  }
+
+  &__files {
+    width:40%;
+    max-width:400px;
+    margin-left:10%;
   }
 }
