--- a/components/vote/app-style.scss
+++ b/components/vote/app-style.scss
@@ -3,9 +3,7 @@
 
 .vote-app {
   &__self-info {
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
+    margin-top: 10px;
   }
 
   &__update-button {
@@ -32,23 +30,13 @@
     }
   }
 
-  &__vote-list {
-    display: flex;
-
-    & > li {
-      display: block;
-      padding: 5px;
-      flex: 2;
-      text-align: center;
-    }
-
-    & > .vote-app__vote-score {
-      flex: 1;
-      width: auto;
-      font-size: 150%;
-    }
+  &__item-table td {
+    vertical-align: middle;
   }
 
+  &__item-score {
+    font-size: 150%;
+  }
 
   &__items-list {
     display: block;
@@ -56,63 +44,31 @@
     & > li {
       display: block;
       padding: 5px;
-      border: 1px solid black;
-      border-top: inherit;
-
-      &:first-child {
-        border-top: 1px solid black;
-      }
     }
   }
 
-  &__vote-buttons {
-    display: flex;
-  }
-
-  &__vote-positive {
-    text-align: left;
-    flex: 1;
-    display: flex;
-    flex-wrap: wrap;
-    > * {
-      height: 20px;
-    }
-  }
-
-  &__vote-negative {
-    text-align: right;
-    flex: 1;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    > * {
-      height: 20px;
-    }
-  }
-
-  &__currency-influence, &__vote-influence &__vote-value {
+  &__currency-influence, &__vote-influence {
     color: blue;
     &:before {
       content: "♦\2009";
     }
   }
 
-  &__currency-goldenInfluence, &__vote-golden &__vote-value {
+  &__currency-goldenInfluence, &__vote-golden {
     color: #bfa203;
     &:before {
       content: "♦\2009";
     }
   }
 
-  &__currency-support, &__vote-support &__vote-value {
+  &__currency-support, &__vote-support {
     color: green;
     &:before {
       content: "$\2009";
     }
   }
 
-  &__vote-thumb &__vote-value {
+  &__vote-thumb {
 
   }
 
